# Braum-core

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  REFACTORING_PHASE_1.md  REFACTORING_SUMMARY_PT_BR.md  USAGE_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  tmp_validate_web_toggle.py
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: auth.py  chat.py  web.py  workspace.py
app/core/: config.py  errors.py  logging_config.py  security.py
app/domain/: __init__.py  auth_schemas.py  question_classifier.py  schemas.py  workspace_schemas.py
app/infrastructure/: llm_provider.py  realtime_knowledge_provider.py  source_policy.py  sql_gateway.py  vector_store.py
app/infrastructure/db/: __init__.py  database.py  models.py
app/services/: general_answer_service.py  orchestrator.py  rag_service.py  session_manager.py  sql_service.py
app/tests/: test_orchestrator.py
app/web/: chat.html  index.html
app/web/css/: base.css  buttons.css  chat.css  forms.css  layout.css  modal.css  sidebar.css
app/web/js/: api.js  app.js  auth-form.js  auth.js  modal.js  password-field.js  state.js  tab-switcher.js  validation.js
exec/: gunicorn.cnf  healthcheck.sh  start.sh  upgrade.sh
exec/cron/: python_run.sh
exec/start/: api.sh  cron.sh
scripts/: atualiza_alembic.py
